// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`search.searchGeolocations should allow filtering as in normal search 1`] = `
Array [
  Object {
    "metadata": Object {
      "inherited_country": Array [
        Object {
          "inherit_geolocation": Array [],
          "label": "Country A en",
          "value": "entity06",
        },
      ],
      "inherited_home": Array [
        Object {
          "inherit_geolocation": Array [
            Object {
              "value": Object {
                "label": "",
                "lat": 13,
                "lon": 7,
              },
            },
          ],
          "label": "Entity with two geolocations en",
          "value": "entity01",
        },
        Object {
          "inherit_geolocation": Array [
            Object {
              "value": Object {
                "label": "",
                "lat": 5,
                "lon": 10,
              },
            },
          ],
          "label": "Entity with single geolocation en",
          "value": "entity03",
        },
        Object {
          "inherit_geolocation": Array [],
          "label": "Entity without geolocation en",
          "value": "entity04",
        },
        Object {
          "inherit_geolocation": Array [],
          "label": "entity without metadata",
          "value": "entity04.1",
        },
      ],
      "regular_geolocation_geolocation": Array [
        Object {
          "value": Object {
            "lat": 18,
            "lon": 7,
          },
        },
      ],
    },
    "sharedId": "entity07",
  },
  Object {
    "metadata": Object {
      "inherited_home": Array [
        Object {
          "inherit_geolocation": Array [
            Object {
              "value": Object {
                "label": "",
                "lat": 111,
                "lon": 222,
              },
            },
          ],
          "label": "Entity not always inherited en",
          "value": "entity02",
        },
        Object {
          "inherit_geolocation": Array [],
          "value": "noExiste",
        },
      ],
    },
    "sharedId": "entity08",
  },
  Object {
    "metadata": Object {
      "inherited_country": Array [
        Object {
          "inherit_geolocation": Array [
            Object {
              "value": Object {
                "label": "",
                "lat": 24,
                "lon": 8,
              },
            },
          ],
          "label": "Country A en",
          "value": "entityPrivate01",
        },
      ],
      "null_geolocation_geolocation": Array [],
    },
    "sharedId": "entity_isLinkedToPrivateEntity",
  },
]
`;

exports[`search.searchGeolocations should include all geolocation finds, inheriting metadata 1`] = `
Array [
  Object {
    "metadata": Object {
      "home_geolocation": Array [
        Object {
          "value": Object {
            "label": "",
            "lat": 13,
            "lon": 7,
          },
        },
      ],
      "work_geolocation": Array [
        Object {
          "value": Object {
            "label": "",
            "lat": 23,
            "lon": 8,
          },
        },
      ],
    },
    "sharedId": "entity01",
  },
  Object {
    "metadata": Object {
      "home_geolocation": Array [
        Object {
          "value": Object {
            "label": "",
            "lat": 111,
            "lon": 222,
          },
        },
      ],
      "work_geolocation": Array [
        Object {
          "value": Object {
            "label": "",
            "lat": 333,
            "lon": 444,
          },
        },
      ],
    },
    "sharedId": "entity02",
  },
  Object {
    "metadata": Object {
      "home_geolocation": Array [
        Object {
          "value": Object {
            "label": "",
            "lat": 5,
            "lon": 10,
          },
        },
      ],
    },
    "sharedId": "entity03",
  },
  Object {
    "metadata": Object {
      "country_geolocation": Array [
        Object {
          "value": Object {
            "label": "",
            "lat": 23,
            "lon": 7,
          },
        },
      ],
    },
    "sharedId": "entity05",
  },
  Object {
    "metadata": Object {
      "inherited_country": Array [
        Object {
          "inherit_geolocation": Array [],
          "label": "Country A en",
          "value": "entity06",
        },
      ],
      "inherited_home": Array [
        Object {
          "inherit_geolocation": Array [
            Object {
              "value": Object {
                "label": "",
                "lat": 13,
                "lon": 7,
              },
            },
          ],
          "label": "Entity with two geolocations en",
          "value": "entity01",
        },
        Object {
          "inherit_geolocation": Array [
            Object {
              "value": Object {
                "label": "",
                "lat": 5,
                "lon": 10,
              },
            },
          ],
          "label": "Entity with single geolocation en",
          "value": "entity03",
        },
        Object {
          "inherit_geolocation": Array [],
          "label": "Entity without geolocation en",
          "value": "entity04",
        },
        Object {
          "inherit_geolocation": Array [],
          "label": "entity without metadata",
          "value": "entity04.1",
        },
      ],
      "regular_geolocation_geolocation": Array [
        Object {
          "value": Object {
            "lat": 18,
            "lon": 7,
          },
        },
      ],
    },
    "sharedId": "entity07",
  },
  Object {
    "metadata": Object {
      "inherited_home": Array [
        Object {
          "inherit_geolocation": Array [
            Object {
              "value": Object {
                "label": "",
                "lat": 111,
                "lon": 222,
              },
            },
          ],
          "label": "Entity not always inherited en",
          "value": "entity02",
        },
        Object {
          "inherit_geolocation": Array [],
          "value": "noExiste",
        },
      ],
    },
    "sharedId": "entity08",
  },
  Object {
    "metadata": Object {
      "inherited_work": Array [
        Object {
          "inherit_geolocation": Array [
            Object {
              "value": Object {
                "label": "",
                "lat": 23,
                "lon": 8,
              },
            },
          ],
          "label": "Entity with two geolocations en",
          "value": "entity01",
        },
      ],
    },
    "sharedId": "entity09",
  },
  Object {
    "metadata": Object {
      "inherited_country": Array [
        Object {
          "inherit_geolocation": Array [
            Object {
              "value": Object {
                "label": "",
                "lat": 24,
                "lon": 8,
              },
            },
          ],
          "label": "Country A en",
          "value": "entityPrivate01",
        },
      ],
      "null_geolocation_geolocation": Array [],
    },
    "sharedId": "entity_isLinkedToPrivateEntity",
  },
]
`;
